--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 BOT_TOKEN=7920928388:AAGJAS232JtkiZuyPYRKAokuzGNEIV7b9jk
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=good_neighbor_db
+DB_USER=your_username
+DB_PASSWORD=your_password
