--- a/db/docker/docker-compose.yml
+++ b/db/docker/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     container_name: good_neighbor_postgres
     environment:
       POSTGRES_DB: good_neighbor_db
-      POSTGRES_USER: your_username
-      POSTGRES_PASSWORD: your_password
+      POSTGRES_USER: username
+      POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
     volumes:
